fix: overflow issue on windows 11 fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  body {
+    zoom: 0.75
+  }
+}
+
 ::-webkit-scrollbar {
   width: 16px;
 }
